--- a/src/content/docs/guides/Browser_Extension.mdx
+++ b/src/content/docs/guides/Browser_Extension.mdx
@@ -1,9 +1,6 @@
 ---
-title: Browser Extension
+title: Guide to use Browser Extension
 description: A comprehensive guide to using the NoCaptcha AI Browser Extension
-sidebar:
-  label: Browser Extension
-  order: 1
 ---
 
 import { Badge } from "@astrojs/starlight/components";
@@ -12,9 +9,10 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 import { Icon } from "@astrojs/starlight/components";
 import { LinkCard } from '@astrojs/starlight/components';
 import { Steps } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
 
-# Automate Captcha Solving with NoCaptcha AI Browser Extension
+<Aside type="caution">Work in progress content.</Aside>
 
 <div class="hero-section">
   <p class="text-red-600 text-sm">
@@ -136,21 +134,11 @@ It offers browser extensions compatible with Chrome and Firefox, enabling users 
     https://nocaptchaai.com
   </Card>
 
-  <Card title="Free Plan" icon="star">
-    Includes <span className="text-yellow-400"> 6000 </span> solves per month
+  <Card title="Free Credits" icon="star">
+    Includes <span className="text-yellow-400">50 </span> request credits to get you started,
     Upgrade options available for higher usage
   </Card>
 </CardGrid>
-
-## Support and Resources
-
-<Card title="Need Help?">
-
-
-<LinkCard title="Refer to NoCaptcha AI Documentation" href="/guides/authoring-content/" />
-<LinkCard title="Join our GitHub community" href="/guides/authoring-content/" />
-<LinkCard title="Check FAQs and troubleshooting guides" href="/guides/authoring-content/" />
-</Card>
 
 ## Related Resources
 
