--- a/src/content/docs/guides/review.mdx
+++ b/src/content/docs/guides/review.mdx
@@ -1,5 +1,5 @@
 ---
-title: Comprehensive Guide to CAPTCHA Solutions
+title: Intro to NoCAPTCHA Ai Services
 description: A detailed overview of different CAPTCHA types and solving methods
 ---
 
@@ -7,10 +7,11 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Card, CardGrid } from '@astrojs/starlight/components';
 import { Icon } from '@astrojs/starlight/components';
 import { Badge } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-# CAPTCHA Solutions Review <Badge text='Updated 2025'  variant="success"/>
 
-This comprehensive guide explores various CAPTCHA types and their solutions, demonstrating how noCaptcha AI handles different verification challenges.
+<Aside type="caution">Work in progress content.</Aside>
+
 
 ## Quick Overview
 
