--- a/src/content/docs/products/ImageTasks/Tiktok.mdx
+++ b/src/content/docs/products/ImageTasks/Tiktok.mdx
@@ -40,7 +40,7 @@ Content-Type: application/json
 
 ## Task structure specification :
 
-<CreateTaskData tableData={createTaskJson.GeeTestV4} />
+<CreateTaskData tableData={createTaskJson.Tiktok} />
 
 
 ## ? Question Types
