--- a/src/content/docs/products/Token/GeeTestv4.mdx
+++ b/src/content/docs/products/Token/GeeTestv4.mdx
@@ -38,11 +38,11 @@ Content-Type: application/json
 
 ```json
 {
-  "clientKey": "YOUR_API_KEY", # your noCaptchaAi.com APIKEY
+  "clientKey": "YOUR_API_KEY",
   "task": {
-    "type": "AntiCloudflareTask",
+    "type": "GeeTestTaskProxyLess",
     "websiteURL": "https://example.com",
-    "proxy": "123.123.0.1:0000:xxxxxx:xxxxxxxx" # your proxy
+    "captchaId": "62c528ead784206de7e6db17765b9ac0",
   }
 }
 ```
@@ -53,7 +53,7 @@ Content-Type: application/json
 {
     "errorId": 0,
     "status": "idle",
-    "taskId": "CFQ2yP5DOL"
+    "taskId": "GTKE9T6XGM"
 }
 ```
 
