--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -2,6 +2,10 @@
 title: The NoCaptcha API ️‍🔥
 description: captcha-solving service, bypass all reCaptcha, geetest Captcha, awswaf Captcha, BLS Captcha, mtCaptcha, OCR captcha and more
 template: splash
+banner:
+  content: |
+    NOTICE: Bypass Cloudflare block in Algeria. Update API to https://backup1.nocaptchaai.com or https://backup2.nocaptchaai.com. Contact your developer. 
+    <a href="https://nocaptchaai.com/updates">Read more</a>
 hero:
   tagline: Scale and bypass web restrictions, boost RPA workflow in minuets with NoCaptchaAi API, Enterprises loves our commitment to quality.
   image:
